<resources>
    <string name="activity_title_errors">Errors</string>
    <string name="activity_title_free_rooms">Free Rooms</string>
    <string name="activity_title_info_center">Info Center</string>
    <string name="activity_title_messenger">Messenger</string>
    <string name="activity_title_settings">Settings</string>
    <string name="all_absences">Absences</string>
    <string name="all_add">Add</string>
    <string name="all_anonymous">Anonymous</string>
    <string name="all_back">Back</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_classes">Classes</string>
    <string name="all_close">Close</string>
    <string name="all_save">Save</string>
    <string name="all_contact_email" translatable="false">betteruntis@sapuseven.com</string>
    <string name="all_delete">Delete</string>
    <string name="all_dialog_absences_checked">Absences checked.</string>
    <string name="all_dialog_absences_not_checked">Absences not checked.</string>
    <string name="all_dialog_absences_save">Submit absence check</string>
    <string name="all_dialog_absences_save_detailed">Submit detailed absence</string>
    <string name="all_dialog_crash_copied">Crash log copied to clipboard.</string>
    <string name="all_dialog_crash_title">Crash log found</string>
    <string name="all_dialog_datepicker_button_today">Today</string>
    <string name="all_dialog_error_message">Request ID: %1$d\nError code: %2$d\nError message: %3$s</string>
    <string name="all_dialog_error_title">Error information</string>
    <string name="all_edit">Edit</string>
    <string name="all_error">Error</string>
    <string name="all_api_error_generic">API Error: %1$s</string>
    <string name="all_error_details">Error: %1$s</string>
    <string name="all_exam">Exam</string>
    <string name="all_exit">Exit</string>
    <string name="all_failed">failed</string>
    <string name="all_hint_tap_to_edit">(Tap to edit)</string>
    <string name="all_homework">Homework</string>
    <string name="all_lesson_cancelled">%1$s (cancelled)</string>
    <string name="all_lesson_details">Lesson details</string>
    <string name="all_lesson_exam">%1$s (exam!)</string>
    <string name="all_lesson_info">Info</string>
    <string name="all_lesson_irregular">%1$s (irregular)</string>
    <string name="all_lessontopic">Lesson topic</string>
    <string name="all_lessontopic_edit">Edit lesson topic</string>
    <string name="all_lessontopic_none">(No topic)</string>
    <string name="all_no">No</string>
    <string name="all_ok">OK</string>
    <string name="all_personal">Personal</string>
    <string name="all_personal_abbr">Pers.</string>
    <string name="all_personal_timetable">Personal Timetable</string>
    <string name="all_report">Report</string>
    <string name="all_reset">Reset</string>
    <string name="all_rooms">Rooms</string>
    <string name="all_subjects">Subjects</string>
    <string name="all_success">success</string>
    <string name="all_teachers">Teachers</string>
    <string name="all_yes">Yes</string>
    <string name="app_desc">An alternative mobile client for the Untis timetable system.</string>
    <string name="app_name" translatable="false">BetterUntis</string>
    <string name="elementpicker_hint_search">Search…</string>
    <string name="elementpicker_hint_search_classes">Search for classes…</string>
    <string name="elementpicker_hint_search_rooms">Search for rooms…</string>
    <string name="elementpicker_hint_search_teachers">Search for teachers…</string>
	<string name="elementpicker_timetable_select">Select a Timetable</string>
	<string name="errormessagedictionary_generic">Unknown error</string>
    <string name="errormessagedictionary_invalid_credentials">Wrong username or key!</string>
    <string name="errormessagedictionary_invalid_school">The specified school doesn\'t exist!</string>
    <string name="errormessagedictionary_invalid_server_url">Invalid server URL!</string>
    <string name="errormessagedictionary_invalid_time_settings">Invalid date and/or time settings!</string>
    <string name="errormessagedictionary_no_public_access">Anonymous access is disabled.</string>
    <string name="errormessagedictionary_no_right">No right for timetable</string>
    <string name="errormessagedictionary_server_webuntis_not_installed">The specified Server doesn\'t have WebUntis installed!</string>
    <string name="errormessagedictionary_too_many_results">Too many results</string>
    <string name="errormessagedictionary_user_locked">User locked!</string>
    <string name="errormessagedictionary_second_factor_requried">2FA token required.</string>
    <string name="errors_button_dismiss">Dismiss all</string>
    <string name="errors_button_report">Report all</string>
    <string name="errors_crash_message">Sorry for that.</string>
    <string name="errors_crash_title">It looks like BetterUntis crashed.</string>
    <string name="errors_github_attach_file_message">Please attach the compressed log files to this issue.\nThey have been saved to `%1$s`</string>
    <string name="errors_report">Please help to fix the app by reporting the errors below:</string>
    <string name="homeworks_due_time">due %1$s</string>
    <string name="homeworks_due_time_format">EEE, dd. MMM</string>
    <string name="infocenter_absence_excused">Excused</string>
	<string name="infocenter_absence_excused_status">Excused (%1$s)</string>
    <string name="infocenter_absence_unexcused">Unexcused</string>
    <string name="infocenter_absence_unexcused_status">Unexcused (%1$s)</string>
	<string name="infocenter_absence_reason">Reason: %1$s</string>
    <string name="infocenter_absence_reason_unknown">Unknown</string>
    <string name="infocenter_absences_empty">No absences</string>
	<string name="infocenter_absences_timerange">%1$s - %2$s</string>
    <string name="infocenter_absences_filter_only_unexcused">Show unexcused only</string>
    <string name="infocenter_absences_filter_sort">Sort order</string>
    <string name="infocenter_absences_filter_oldest_first">Oldest first</string>
    <string name="infocenter_absences_filter_newest_first">Newest first</string>
    <string name="infocenter_absences_filter_time_ranges">Time ranges</string>
    <string name="infocenter_absences_filter">Filter absences</string>
	<string name="infocenter_exams">Exams</string>
	<string name="infocenter_exams_empty">No exams</string>
	<string name="infocenter_homework">Homework</string>
	<string name="infocenter_homework_empty">No homework</string>
	<string name="infocenter_events_exam_name_long">%1$s - %2$s</string>
	<string name="infocenter_messages_attachments">Attachments</string>
	<string name="infocenter_messages_empty">No messages</string>
	<string name="infocenter_officehours_empty">No office hours</string>
	<string name="infocenter_timeformat">%2$s, %1$s - %4$s, %3$s</string>
	<string name="infocenter_timeformat_sameday">%2$s - %4$s, %1$s</string>
    <string name="library_appcompat" translatable="false">Android AppCompat Library V7</string>
    <string name="library_code_scanner" translatable="false">CodeScanner</string>
    <string name="library_colorpicker_compat" translatable="false">ColorPicker Compat</string>
    <string name="library_constraintlayout" translatable="false">Android ConstraintLayout</string>
    <string name="library_fuel" translatable="false">Fuel</string>
    <string name="library_fuel_coroutines" translatable="false">Fuel Coroutines</string>
    <string name="library_junit" translatable="false">JUnit</string>
    <string name="library_kotlin_reflect" translatable="false">Kotlin Reflection</string>
    <string name="library_kotlin_stdlib" translatable="false">Kotlin Standard Library</string>
    <string name="library_kotlin_test_junit" translatable="false">Kotlin Test JUnit</string>
    <string name="library_kotlinx_coroutines_android" translatable="false">Kotlinx Coroutines Android</string>
    <string name="library_kotlinx_serialization_runtime" translatable="false">Kotlinx Serialization Runtime</string>
    <string name="library_material" translatable="false">Material Components For Android</string>
    <string name="library_materialcomponent_banner" translatable="false">MaterialComponent.Banner</string>
    <string name="library_materialdaypicker" translatable="false">Materialdaypicker</string>
    <string name="library_mockito_core" translatable="false">Mockito Core</string>
    <string name="library_preference_ktx" translatable="false">Android Preferences KTX</string>
    <string name="library_recyclerview" translatable="false">Android Support RecyclerView V7</string>
    <string name="library_swiperefreshlayout" translatable="false">Android Support Library Custom View</string>
    <string name="library_weekview" translatable="false">WeekView</string>
    <string name="loading">Loading</string>
    <string name="loading_failed">Loading failed</string>
    <string name="login_manual_data_input">Manual data input</string>
    <string name="login_no_results">No results</string>
    <string name="login_please_log_in">Choose one of the following options to login:</string>
    <string name="login_scan_code">Scan QR code</string>
    <string name="login_search_by_school_name_or_address">Search by school name or address</string>
    <string name="login_welcome">Welcome to BetterUntis!</string>
    <string name="logindatainput_adding_user_unknown_error">An unknown error happened while adding the user.</string>
    <string name="logindatainput_anonymous_login">Anonymous login</string>
    <string name="logindatainput_api_url">Untis API path</string>
    <string name="logindatainput_aquiring_app_secret">Acquiring app secret …</string>
    <string name="logindatainput_aquiring_schoolid">Loading school…</string>
    <string name="logindatainput_connecting">Connecting…</string>
    <string name="logindatainput_data_loaded">Data loaded.</string>
    <string name="logindatainput_delete">Delete profile</string>
    <string name="logindatainput_dialog_qrcodeinvalid_text">The scanned QR code either has an invalid format or is not supported by BetterUntis.</string>
    <string name="logindatainput_dialog_qrcodeinvalid_title">Invalid QR code</string>
    <string name="logindatainput_error_field_empty">This field cannot be empty!</string>
    <string name="logindatainput_error_invalid_format">Invalid format!</string>
    <string name="logindatainput_error_invalid_school">Invalid school ID!</string>
    <string name="logindatainput_error_invalid_url">Invalid URL!</string>
    <string name="logindatainput_key">Key or Password</string>
    <string name="logindatainput_key_saved">Key or Password (saved)</string>
    <string name="logindatainput_2fa">Two-Factor Authentication</string>
    <string name="logindatainput_loading_user_data">Loading user data…</string>
    <string name="logindatainput_login">Login</string>
    <string name="logindatainput_profilename">Profile name (optional)</string>
    <string name="logindatainput_proxy_host">Proxy server (optional)</string>
    <string name="logindatainput_school">School name or ID</string>
    <string name="logindatainput_show_advanced">Show advanced settings</string>
    <string name="logindatainput_skip_app_secret">Skip app secret resolution</string>
    <string name="logindatainput_skip_school_id">Skip school ID resolution</string>
    <string name="logindatainput_title_add">Add profile</string>
    <string name="logindatainput_title_edit">Edit profile</string>
    <string name="logindatainput_username">Username</string>
    <string name="main_anonymous_login_info_text">You have to setup a custom personal timetable for anonymous profiles.</string>
    <string name="settings_recommend_hide">Don\'t show again</string>
    <string name="settings_recommend_message">If you are enjoying BetterUntis, spread the word and tell your friends!</string>
    <string name="settings_recommend_share">Share</string>
</resources>