<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activities.LoginDataInputActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_school"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:hint="@string/logindatainput_school">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_logindatainput_school"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text" />

			</com.google.android.material.textfield.TextInputLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:background="?android:attr/listDivider" />

			<Switch
				android:id="@+id/switch_logindatainput_anonymouslogin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:text="@string/logindatainput_anonymous_login" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_user"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:hint="@string/logindatainput_username">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_logindatainput_user"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_key"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:hint="@string/logindatainput_key"
				app:passwordToggleEnabled="true">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_logindatainput_key"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword" />

			</com.google.android.material.textfield.TextInputLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:background="?android:attr/listDivider"/>

			<Switch
				android:id="@+id/switch_logindatainput_advanced"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:text="@string/logindatainput_show_advanced"/>

			<LinearLayout
				android:id="@+id/linearlayout_logindatainput_advanced"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:visibility="gone">

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/textinputlayout_logindatainput_proxy_host"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="16dp"
					android:layout_marginEnd="16dp"
					android:hint="@string/logindatainput_proxy_host">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/edittext_logindatainput_proxy_host"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textUri"/>

				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginBottom="16dp"
				android:gravity="center_vertical|end"
				android:orientation="horizontal">

				<ProgressBar
					android:id="@+id/progressbar_logindatainput_loadingstatus"
					style="?android:attr/progressBarStyleSmall"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:visibility="gone" />

				<ImageView
					android:id="@+id/imageview_logindatainput_loadingstatussuccess"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:contentDescription="@string/all_success"
					android:visibility="gone"
					app:srcCompat="@drawable/all_check" />

				<ImageView
					android:id="@+id/imageview_logindatainput_loadingstatusfailed"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:contentDescription="@string/all_failed"
					android:visibility="gone"
					app:srcCompat="@drawable/all_failed" />

				<TextView
					android:id="@+id/textview_logindatainput_loadingstatus"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="24dp"
					android:layout_weight="1"
					android:text="@string/logindatainput_connecting"
					android:visibility="gone" />

			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="end"
		android:orientation="horizontal"
		android:padding="8dp">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/button_logindatainput_delete"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:text="@string/logindatainput_delete"
			android:visibility="gone" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/button_logindatainput_login"
			style="@style/Widget.MaterialComponents.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/logindatainput_login" />
	</LinearLayout>
</LinearLayout>
