<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:backgroundTint="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="12dp"
        android:paddingBottom="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="12dp"
            android:text="@string/settings_recommend_message"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.Material3.Button.TextButton.Dialog"
	            android:id="@+id/leftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_recommend_hide"
                android:textColor="?android:attr/textColorPrimaryInverse" />

            <Button
	            style="@style/Widget.Material3.Button.TextButton.Dialog"
	            android:id="@+id/rightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_recommend_share"
                android:textColor="?android:attr/textColorPrimaryInverse" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>