<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: Fix the appearance of text fields (especially fix the AutoCompleteTextView) -->

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.LoginDataInputActivity">

	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/button_logindatainput_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_url"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_logindatainput_input"
				android:layout_marginLeft="@dimen/margin_logindatainput_input"
				android:layout_marginRight="@dimen/margin_logindatainput_input"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:layout_marginTop="@dimen/margin_logindatainput_input_large"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<AutoCompleteTextView
					android:id="@+id/edittext_logindatainput_url"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:completionThreshold="1"
					android:hint="@string/logindatainput_url"
					android:inputType="textUri"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_school"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_logindatainput_input"
				android:layout_marginLeft="@dimen/margin_logindatainput_input"
				android:layout_marginRight="@dimen/margin_logindatainput_input"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:layout_marginTop="@dimen/margin_logindatainput_input"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textinputlayout_logindatainput_url">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_logindatainput_school"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/logindatainput_schoolname"
					android:inputType="text"/>

			</com.google.android.material.textfield.TextInputLayout>

			<Switch
				android:id="@+id/switch_logindatainput_anonymouslogin"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_logindatainput_input"
				android:layout_marginLeft="@dimen/margin_logindatainput_input"
				android:layout_marginRight="@dimen/margin_logindatainput_input"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:layout_marginTop="@dimen/margin_logindatainput_input_large"
				android:text="@string/logindatainput_anonymous_login"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textinputlayout_logindatainput_school"/>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_user"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_logindatainput_input"
				android:layout_marginLeft="@dimen/margin_logindatainput_input"
				android:layout_marginRight="@dimen/margin_logindatainput_input"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:layout_marginTop="@dimen/margin_logindatainput_input"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/switch_logindatainput_anonymouslogin">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_logindatainput_user"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/logindatainput_username"
					android:inputType="text"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout_logindatainput_key"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_logindatainput_input"
				android:layout_marginLeft="@dimen/margin_logindatainput_input"
				android:layout_marginRight="@dimen/margin_logindatainput_input"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:layout_marginTop="@dimen/margin_logindatainput_input"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textinputlayout_logindatainput_user"
				app:passwordToggleEnabled="true">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edittext_logindatainput_key"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/logindatainput_key"
					android:inputType="textPassword"/>

			</com.google.android.material.textfield.TextInputLayout>

			<ProgressBar
				android:id="@+id/progressbar_logindatainput_loadingstatus"
				style="?android:attr/progressBarStyleSmall"
				android:layout_width="@dimen/size_logindatainput_loadingstatus"
				android:layout_height="@dimen/size_logindatainput_loadingstatus"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="@+id/textview_logindatainput_loadingstatus"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/textview_logindatainput_loadingstatus"/>

			<ImageView
				android:id="@+id/imageview_logindatainput_loadingstatussuccess"
				android:layout_width="@dimen/size_logindatainput_loadingstatus"
				android:layout_height="@dimen/size_logindatainput_loadingstatus"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:contentDescription="@string/all_success"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="@+id/textview_logindatainput_loadingstatus"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/textview_logindatainput_loadingstatus"
				app:srcCompat="@drawable/all_check"/>

			<ImageView
				android:id="@+id/imageview_logindatainput_loadingstatusfailed"
				android:layout_width="@dimen/size_logindatainput_loadingstatus"
				android:layout_height="@dimen/size_logindatainput_loadingstatus"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:contentDescription="@string/all_failed"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="@+id/textview_logindatainput_loadingstatus"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/textview_logindatainput_loadingstatus"
				app:srcCompat="@drawable/all_failed"/>

			<TextView
				android:id="@+id/textview_logindatainput_loadingstatus"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/margin_logindatainput_input"
				android:layout_marginLeft="@dimen/margin_logindatainput_input"
				android:layout_marginRight="@dimen/margin_logindatainput_input"
				android:layout_marginStart="@dimen/margin_logindatainput_input"
				android:layout_marginTop="@dimen/margin_logindatainput_input_large"
				android:paddingStart="@dimen/margin_logindatainput_loadingstatusmessage"
				android:paddingEnd="0dp"
				android:text="@string/logindatainput_connecting"
				android:visibility="gone"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textinputlayout_logindatainput_key"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<Button
		android:id="@+id/button_logindatainput_login"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/logindatainput_login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
