<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="12dp">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="12dp"
		android:paddingEnd="12dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingStart="12dp"
		android:textColor="?android:attr/textColorPrimary"
		android:textSize="20sp"
		android:textStyle="bold"/>

	<LinearLayout
		android:id="@+id/llTeachers"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:layout_marginEnd="24dp"
			android:layout_marginStart="12dp"
			android:layout_marginTop="12dp"
			android:contentDescription="@string/all_teachers"
			android:tint="?android:attr/textColorPrimary"
			app:srcCompat="@drawable/all_teacher"/>

		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingEnd="12dp"
			android:paddingStart="0dp">

			<LinearLayout
				android:id="@+id/llTeacherList"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">

			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/llClasses"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:layout_marginEnd="24dp"
			android:layout_marginStart="12dp"
			android:layout_marginTop="12dp"
			android:contentDescription="@string/all_classes"
			android:tint="?android:attr/textColorPrimary"
			app:srcCompat="@drawable/all_classes"/>

		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingEnd="12dp"
			android:paddingStart="0dp">

			<LinearLayout
				android:id="@+id/llClassList"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">

			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/llRooms"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:layout_marginEnd="24dp"
			android:layout_marginStart="12dp"
			android:layout_marginTop="12dp"
			android:contentDescription="@string/all_rooms"
			android:tint="?android:attr/textColorPrimary"
			app:srcCompat="@drawable/all_rooms"/>

		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingEnd="12dp"
			android:paddingStart="0dp">

			<LinearLayout
				android:id="@+id/llRoomList"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">

			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>
</LinearLayout>